--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.0",
     "reanimated-masonry-list": "^1.0.1"
   },
   "devDependencies": {
