--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-blur": "~12.4.1",
+    "expo-secure-store": "^12.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
