--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-blur": "~12.4.1",
+    "expo-image-picker": "^14.5.0",
     "expo-secure-store": "^12.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "~3.22.0",
