--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@types/axios": "^0.14.0",
     "axios": "^1.5.0",
     "expo": "~49.0.8",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-heroicons": "^3.2.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.7.2",
