--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "@gorhom/bottom-sheet": "^4.5.0",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -26,6 +27,7 @@
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-heroicons": "^3.2.0",
@@ -34,6 +36,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "~0.19.6",
     "reanimated-masonry-list": "^1.0.1"
   },
   "devDependencies": {
