--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "@gorhom/bottom-sheet": "^4.5.0",
-    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -20,20 +20,21 @@
     "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-blur": "~12.4.1",
-    "expo-image-picker": "^14.5.0",
     "expo-secure-store": "^12.5.0",
-    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "~0.19.6",
     "reanimated-masonry-list": "^1.0.1"
   },
   "devDependencies": {
