--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "reanimated-masonry-list": "^1.0.1"
